--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://watkincs.github.io/react-code",
+  "homepage": "https://watkincw.github.io/MARS-React/",
   "name": "react-code",
   "version": "0.1.0",
   "private": true,
